# md2pdf

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MAINTAINERS.md  README.md  SECURITY.md  action.yml  deny.toml  release-plz.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: audit.yml  bench.yml  ci.yml  examples.yml  release-plz.yml  release.yml  semver.yml
benches/: README.md  gen.sh  run.sh
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  main.rs
crates/cli/src/commands/: convert.rs  doctor.rs  init.rs  mod.rs  theme.rs  validate.rs
crates/cli/tests/: cli.rs
crates/core/: Cargo.toml
crates/core/benches/: pipeline.rs
crates/core/src/: config.rs  ir.rs  lib.rs  parser.rs  security.rs  theme.rs
crates/core/src/render/: mod.rs
crates/core/src/render/docx/: mod.rs
crates/core/src/render/html/: mod.rs
crates/core/src/render/typst/: lower.rs  mod.rs
crates/core/tests/: corpus.rs  docx.rs  golden.rs  html.rs  properties.rs
crates/core/tests/golden/: sample.typ
docs/: ARCHITECTURE.md  BENCHMARKS.md  COMPARISON.md  IMPACT.md  INSTALL.md  PROGRAM.md  QUICKSTART.md  ROADMAP.md
examples/: sample.md
examples/gallery/: README.md  build.sh
examples/gallery/api-documentation/: source.md
examples/gallery/developer-handbook/: source.md
examples/gallery/feature-tour/: source.md  theme.toml
examples/gallery/invoice/: source.md
examples/gallery/release-notes/: source.md
examples/gallery/resume/: source.md
examples/gallery/technical-report/: source.md
examples/gallery/whitepaper/: source.md
examples/workflows/: convert-docs-dir.yml  readme-to-pdf.yml
src/: convert.rs  main.rs  theme.rs
