[workspace]
members = ["crates/core", "crates/cli"]
resolver = "2"

[workspace.package]
version = "0.2.2"
edition = "2024"
rust-version = "1.89"
license = "MIT"
authors = ["Mohamed Moetaz Njim <mohamedmoetaznjim@gmail.com>"]
repository = "https://github.com/mohamed-moetaz-njim/md2pdf"
homepage = "https://github.com/mohamed-moetaz-njim/md2pdf"

[workspace.dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.5"
clap_mangen = "0.3"
comrak = "0.52.0"
serde = { version = "1", features = ["derive"] }
serde_with = "3.12"
toml = "1.1"
typst = "0.14.2"
typst-as-lib = { version = "0.15.5", features = ["typst-kit-fonts", "typst-kit-embed-fonts"] }
typst-pdf = "0.14.2"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
