[package]
name = "md2pdf-core"
description = "Core library for md2pdf: a renderer-agnostic Markdown IR, parser, themes, security policy and pluggable renderers."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
comrak.workspace = true
serde.workspace = true
serde_with.workspace = true
toml.workspace = true
typst.workspace = true
typst-as-lib.workspace = true
typst-pdf.workspace = true

[dev-dependencies]
proptest = "1"
criterion = "0.5"

[[bench]]
name = "pipeline"
harness = false
